<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_gig_selection"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.example.nathan.dublinsounds.GigSelectionActivity">

    <TextView
        android:text="@string/gigSelection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/gigSelectionText" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/artistName"
        tools:text="@string/artistName" />

    <Button
        android:text="@string/submitEvent"
        android:layout_width="386dp"
        android:layout_height="wrap_content"
        android:id="@+id/submitEventBtn"
                                        />
</LinearLayout>
