<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_radio"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.nathan.dublinsounds.RadioActivity"
    android:orientation="vertical">

    <TextView
        android:text="@string/airportLbl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/pauseMusicBtn"
        android:layout_alignEnd="@+id/pauseMusicBtn"
        android:textAlignment="center" />

    <Button
        android:text="@string/startRadioBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/playRadio"
        android:layout_marginTop="11dp"
        android:layout_below="@+id/textView"
        android:layout_toRightOf="@+id/playMusicBtn"
        android:layout_toEndOf="@+id/playMusicBtn"
        android:layout_marginLeft="18dp"
        android:layout_marginStart="18dp"
        android:textAlignment="center"
        android:elevation="0dp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="260dp"
        app:srcCompat="@drawable/dublin"
        android:id="@+id/imageView2" />

    <TextView
        android:text="@string/musicLbl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:textAlignment="center"
        android:paddingTop="10dp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp">

            <Button
                android:text="@string/playBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/playMusicBtn"
                android:layout_alignBaseline="@+id/pauseMusicBtn"
                android:layout_alignBottom="@+id/pauseMusicBtn"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textAlignment="center" />

            <Button
                android:text="@string/pauseBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/pauseMusicBtn"
                android:layout_alignBaseline="@+id/resumeMusicBtn"
                android:layout_alignBottom="@+id/resumeMusicBtn"
                android:layout_centerHorizontal="true"
                android:textAlignment="center" />

            <Button
                android:text="@string/resumeBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/resumeMusicBtn"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                tools:ignore="RelativeOverlap"
                android:minWidth="90dip"
                android:textAlignment="center" />

            <Button
                android:text="@string/stopBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/stopMusicBtn"
                android:layout_below="@+id/pauseMusicBtn"
                android:layout_alignRight="@+id/pauseMusicBtn"
                android:layout_alignEnd="@+id/pauseMusicBtn"
                android:textAlignment="center" />
        </TableRow>

    </TableLayout>

</LinearLayout>


